# kaggle-courses

./: .gitignore  .prettierrc.json  package.json  pnpm-lock.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.roo/: jupyter_notebook_translation_prompt.md  mcp.json.example  project-progress.md
.roo/rules/: project.md
intermediate_machine_learning/: 02-missing-values.ipynb  03-categorical-variables.ipynb  04-pipelines.ipynb  toukei.ipynb
super-beginner/: 01-bunpu.ipynb  01-toukei-shoho.ipynb  03-1-kakuritsu-bunpu.ipynb  03-2-kakuritsu-risan-bunpu1.ipynb  03-3-kakuritsu-risan-bunpu2.ipynb  03-4-kakuritsu-risan-bunpu3.ipynb
super-beginner/01-kijutsu-toukei/: 01-toukei-shoho.ipynb
super-beginner/02-kakuritsu-ron/: 01-kakuritsu-ron.ipynb
