[project]
name = "kaggle-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "learntools[core]>=0.0.20",
    "matplotlib>=3.10.1",
    "matplotlib-fontja>=1.1.0",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
